# sw-cli

./: .gitignore  CLAUDE.md  COPYRIGHT  Cargo.toml  PROJECT_STATUS.md  README.org  build.rs
docs/: ARCHITECTURE_VISION.md  clap-integration-and-help.md  example-cli-with-macros.md  macro-based-cli-design.md  multi-crate-refactoring.md  plan.md  version-usage.md
examples/build-config-dispatch-demo/: COPYRIGHT  Cargo.toml  build.rs
examples/build-config-dispatch-demo/src/: main.rs
examples/demo-cli/: Cargo.toml  build.rs
examples/demo-cli/src/: main.rs
examples/macro-cli-demo/: Cargo.toml  README.md
examples/macro-cli-demo/src/: long-help.txt  main.rs  short-help.txt
examples/mini-cli-demo/: Cargo.toml  README.md  build.rs
examples/mini-cli-demo/src/: long-help.txt  main.rs  short-help.txt
examples/working-cli-demo/: Cargo.toml  README.md
examples/working-cli-demo/src/: args.rs  builder.rs  config.rs  dispatcher.rs  lib.rs  long-help.txt  main.rs  short-help.txt
examples/working-cli-demo/src/actions/: copy.rs  count.rs  grep.rs  help.rs  mod.rs  reverse.rs  version.rs
examples/working-cli-demo/tests/: config_test.rs  dispatcher_test.rs
scripts/: build.sh  demo.sh  test.sh
src/: builder.rs  command.rs  config.rs  dispatcher.rs  lib.rs  version.rs
src/commands/: help.rs  mod.rs  version.rs
sw-cli-macros/: Cargo.toml
sw-cli-macros/src/: lib.rs
