[package]
name = "build-config-dispatch-demo"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/softwarewrighter/sw-cli"

[dependencies]
# Note: These dependencies represent the FUTURE state after refactoring
# Currently, these modules don't exist yet - this is a design demonstration
# In the future, users will depend on sw-cli which re-exports everything
sw-cli = { path = "../.." }

[build-dependencies]
sw-cli = { path = "../.." }
